--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a target="_blank"  href="index.html">Accueil</a></li> 
             <li><a target="_blank"   href="Histoire.html">Histoire</a></li>
-            <li><a target="_blank"   href="Fonctionnement.html">Fonctionnement</a></li>
+            <li><a target="_blank"   href="fonctionnement.html">Fonctionnement</a></li>
           
                                                        
         </ul>
