--- a/Histoire.html
+++ b/Histoire.html
@@ -12,7 +12,7 @@
         <ul> 
             <li><a href="index.html">Accueil</a></li>   
             <li><a href="Histoire.html">Histoire</a></li>
-            <li><a href="Fonctionnement.html">Fonctionnement</a></li>
+            <li><a href="fonctionnement.html">Fonctionnement</a></li>
             
            
         </ul>
